force-app/main/default/objects/ucinn_ascendv2__Designation_Stewardship__c/ucinn_ascendv2__Designation_Stewardship__c.object-meta.xml
<CustomObject>
    <description>Designation Stewardship assigned to a constituent, or organization.</description>
    <label>Designation Stewardship</label>
    <nameField>
        <displayFormat>DSN-{000000}</displayFormat>
        <label>Designation Stewardship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Designation Stewardships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>