force-app/main/default/objects/ucinn_ascendv2__Designation_Stewardship__c/fields/ucinn_ascendv2__Account_Stewardee__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Stewardee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Organization assigned this designation stewardship.</description>
    <inlineHelpText>The Organization assigned this designation stewardship.</inlineHelpText>
    <label>Organization Stewardee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Designation Stewardships</relationshipLabel>
    <relationshipName>Designation_Stewardships_Acct_Stewardee</relationshipName>
    <type>Lookup</type>
</CustomField>