force-app/main/default/objects/ucinn_ascendv2__Designation_Stewardship__c/fields/ucinn_ascendv2__Contact_Stewardee__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Stewardee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Constituent assigned this designation stewardship.</description>
    <inlineHelpText>The Constituent assigned this designation stewardship.</inlineHelpText>
    <label>Constituent Stewardee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Designation Stewardships</relationshipLabel>
    <relationshipName>Designation_Stewardships_Cont_Stewardee</relationshipName>
    <type>Lookup</type>
</CustomField>