force-app/main/default/objects/ucinn_ascendv2__Designation_Stewardship__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <description>The [master] Designation record to which this Stewardee record is related.</description>
    <inlineHelpText>The [master] Designation record to which this Stewardee record is related.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipName>Stewardees_Designation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>