force-app/main/default/objects/ucinn_ascendv2__Designation_Stewardship__c/fields/ucinn_ascendv2__Designation_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation__r.ucinn_ascendv2__Designation_Name__c</formula>
    <label>Designation Name</label>
    <type>Text</type>
</CustomField>