force-app/main/default/objects/ucinn_ascendv2__Designation_Stewardship__c/fields/ucinn_ascendv2__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__End_Date__c</fullName>
    <description>The End Date for this stewardee record.</description>
    <inlineHelpText>The End Date for this stewardee record.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>