force-app/main/default/objects/ucinn_ascendv2__Designation_Stewardship__c/fields/ucinn_ascendv2__Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Role__c</fullName>
    <label>Stewardee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Internal Steward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>